--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Create Your Audiobook</h1>
-        <form action="/upload" method="POST" enctype="multipart/form-data">
+        <form action="https://portfolio-cwvz.onrender.com/upload" method="POST" enctype="multipart/form-data">
             <label for="file">Upload your text file:</label>
             <input type="file" name="file" id="file" required><br><br>
 
@@ -24,4 +24,4 @@
         </form>
     </div>
 </body>
-</html>
+                </html>
